--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
 
     // ViewModel dependency
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc03'
@@ -68,6 +68,19 @@ dependencies {
 
     // Kotlin android core extension
     implementation 'androidx.core:core-ktx:1.1.0'
+    // ViewModel and LiveData
+    implementation  "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // Room for database
+    implementation  "androidx.room:room-ktx:$room_version"
+
+    // network & serialization
+    implementation  "com.google.code.gson:gson:$gson_version"
+    implementation  "com.squareup.retrofit2:converter-gson:$retrofit_gson_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
 }
