--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
-    ext.koin_version = '2.0.1'
+    ext {
+        // local variables (use def)
+        def androidx_test_version = '1.2.0'
+        kotlin_version = '1.3.61'
+        koin_version = '2.0.1'
+        gson_version = '2.8.6'
+        lifecycle_version = '2.1.0'
+        retrofit_gson_version = '2.6.2'
+        retrofit_version = '2.6.2'
+        room_version = '2.2.2'
+        livedata_version = '2.2.0-rc03'
+        work_version = '2.2.0'
+
+
+    }
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -20,7 +34,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
