--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,6 @@ dependencies {
     //RxJava2
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
 }
